# T_laba03

./: CMakeLists.txt  formatter.cpp  formatter.h
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
formatter_lib1/: README.md
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt
